--- a/code/data-gathering/workflows/zenodo-random-samples-zip-content/Snakefile
+++ b/code/data-gathering/workflows/zenodo-random-samples-zip-content/Snakefile
@@ -33,6 +33,8 @@ rule zipfiles:
         HTTP.remote("zenodo.org/record/3531504/files/zenodo-records-json-2019-09-16-filtered.jsonseq.xz", keep_local=True)
     output:
         "zenodo-records/zipfiles.tsv"
+    conda:
+        "envs/jq.yaml"
     shell:
         "xzcat {input} |"
         """jq -r '. | select(.metadata.access_right == "open") | 
@@ -55,6 +57,8 @@ rule shuffled:
         seed="seed"
     output:
         "zenodo-records/zipfiles-shuffled.tsv"
+    conda:
+        "envs/coreutils.yaml"
     shell:
         "shuf --random-source={input.seed} {input.tsv} > {output}"
 
