--- a/code/data-gathering/workflows/zenodo-random-samples-zip-content/envs/curl-unzip.yaml
+++ b/code/data-gathering/workflows/zenodo-random-samples-zip-content/envs/curl-unzip.yaml
@@ -2,4 +2,4 @@ channels:
   - conda-forge
 dependencies:
   - unzip => 6.0
-  - curl => 7.67.0
+  - curl => 7.67.0 ## To honour "429 Too Many Requests" rate-limiting from Zenodo
