--- a/environment.yml
+++ b/environment.yml
@@ -5,4 +5,8 @@ dependencies:
   - python =3.6
   - xz => 5.2.4
   - cwltool => 1.0.20191022103248
+  - jupyter => 1.0.0
+  - pandas => 0.25.3
+  - seaborn => 0.9.0
+  - conda-forge::coreutils => 8.30
   - bioconda::snakemake-minimal =>5.8.1
